--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "palagruza-web",
+  "name": "nuxt-template",
   "version": "1.0.0",
   "description": "",
-  "author": "DUMP udruga mladih programera",
+  "author": "",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
@@ -12,12 +12,15 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-validator": "^6.4.0",
+    "jsonwebtoken": "^8.5.1",
     "nuxt": "^2.0.0",
     "pg": "^8.0.0",
     "sequelize": "^5.21.5"
@@ -30,8 +33,10 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "node-sass": "^4.13.1",
     "nodemon": "^1.18.9",
     "prettier": "^1.19.1",
+    "sass-loader": "^8.0.2",
     "sequelize-cli": "^5.5.1"
   }
 }
